<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/big_text"
        android:padding="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/big_text"
        android:layout_below="@id/welcome"

        android:padding="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/acad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/android"
        android:layout_gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/big_text"
        android:layout_alignParentRight="true"
        android:layout_below="@id/to"
        android:padding="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/presents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/presents"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/big_text"
        android:layout_centerInParent="true"
        android:padding="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/acad_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom_string"
        android:layout_gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/big_text"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/activity_vertical_margin"/>

</RelativeLayout>
